# api/handler/handler.go
@@ -2,10 +2,14 @@ package handler
 
 import (
 	"api/genproto/content"
+	"api/genproto/itineraries"
+	"api/genproto/story"
 	"log/slog"
 )
 
 type Handler struct {
-	Content content.ContentClient
-	Log     *slog.Logger
+	Itinerary itineraries.ItinerariesClient
+	Story     story.StoryClient
+	Content   content.ContentClient
+	Log       *slog.Logger
 }
